cmake_minimum_required(VERSION 3.15)

# set the project name and version
project(pbc VERSION 1.0)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

set(THIRD_PARTY_DIR         "${CMAKE_CURRENT_SOURCE_DIR}/3rd")
set(SOURCE_CODE_DIR         "${CMAKE_CURRENT_SOURCE_DIR}/src")

set(PROTOBUF_INCLUDE_PATH   ${THIRD_PARTY_DIR}/protobuf-3.7.0/include)
set(PROTOBUF_LIB_PATH       ${THIRD_PARTY_DIR}/protobuf-3.7.0/lib)

set(PBC_INCLUDE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(PBC_LIB_OUTPUT_PATH     ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(PBC_BIN_OUTPUT_PATH     ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(PBC_EXEC_INCLUDE_PATH   ${PROTOBUF_INCLUDE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(PBC_EXEC_LIB_PATH       ${PROTOBUF_LIB_PATH} ${PBC_LIB_OUTPUT_PATH})

set(PROTOC_TOOL             ${THIRD_PARTY_DIR}/protobuf-3.7.0/bin/protoc)

add_subdirectory(src)
# add_subdirectory(test)
